<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/menu_movie" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tv"
        android:title="@string/menu_tv" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorite" />

</menu>